--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/bee.webp" title="Bee Keeper Free Demo, Review & Where to Play" alt="Bee Keeper Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												BEE KEEPER
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.1%
 											</div>
@@ -366,9 +366,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/myslic.webp" title="Mystic wishes Free Demo, Review & Where to Play" alt="Mystic wishes Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Mystic Wishes
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.2%
 											</div>
@@ -392,9 +392,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/sweet.webp" title="Sweet Rush Bonanza Free Demo, Review & Where to Play" alt="Sweet rush bonanza Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Sweet Rush Bonanza
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.5%
 											</div>
@@ -418,9 +418,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/fortune.webp" title="Fortune Spin Free Demo, Review & Where to Play" alt="Fortune Spin Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Fortune Spin
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.1%
 											</div>
@@ -444,9 +444,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/fogo.webp" title="Fogo Do Brazil Free Demo, Review & Where to Play" alt="Fogo do brazil Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Fogo Do Brazil
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.2%
 											</div>
@@ -470,9 +470,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/royal.webp" title="3 Royal Coins Hold and win Slot Game Thumbnail" alt="3 Royal Coins Hold and win Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												3 Royal Coins: Hold and Win
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.2%
 											</div>
@@ -592,9 +592,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/panda.webp" title="Panda Magic Aristocrat Slot Review & Where to Play" alt="Panda Magic Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Panda Magic
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.8%
 											</div>
@@ -617,9 +617,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/big.webp" title="Big Red Aristocrat Slot Review & Where to Play" alt="Big Red Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Big Red
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>97.0%
 											</div>
@@ -642,9 +642,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/coin.webp" title="Coin Strike: Hold and Win Free Demo, Review & Where to Play" alt="Coin Strike hold and win Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Coin Strike
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.66%
 											</div>
@@ -668,9 +668,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/aztec.webp" title="Aztec Magic Bonanza Free Demo, Review & Where to Play" alt="Aztec magic bonanza Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Aztec Magic Bonanza
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.00%
 											</div>
@@ -694,9 +694,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/gates.webp" title="Gates of Olympus Free Demo, Review & Where to Play" alt="Gates of Olympus Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Gates of Olympus
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.5%
 											</div>
@@ -720,9 +720,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/bucks.webp" title="Big Bucks Saloon Free Demo, Review & Where to Play" alt="Big Bucks Saloon Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Big Bucks Saloon
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>97.01%
 											</div>
@@ -842,9 +842,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/ben.webp" title="Big Ben Aristocrat Slot Review & Where to Play" alt="Big Ben Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Big Ben
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.55%
 											</div>
@@ -867,9 +867,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/century.webp" title="Golden Century Aristocrat Slot Review & Where to Play" alt="Golden Century Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Golden Century
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.2%
 											</div>
@@ -892,9 +892,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/prosperous.webp" title="Happy and Prosperous Aristocrat Slot Review & Where to Play" alt="Happy and Prosperous Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Happy and Prosperous
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.2%
 											</div>
@@ -917,9 +917,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/zorro.webp" title="Zorro Aristocrat Slot Review & Where to Play" alt="Zorro Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Zorro
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.5%
 											</div>
@@ -942,9 +942,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/moon.webp" title="Autumn Moon Aristocrat Slot Review & Where to Play" alt="Autumn Moon Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Autumn Moon
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>95.2%
 											</div>
@@ -967,9 +967,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/fire.webp" title="Tiki Fire Aristocrat Slot Review & Where to Play" alt="Tiki Fire Slot Game Thumbnail" />
 										<div class="slider__info two">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Tiki Fire
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span> 95.99%
 											</div>
@@ -1088,9 +1088,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/cricket.webp" title="Hot Cricket Free Demo, Review & Where to Play" alt="Hot Cricket Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Hot Cricket
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.00%
 											</div>
@@ -1114,9 +1114,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/aviamasters.webp" title="Avia Masters Free Demo, Review & Where to Play" alt="Avia Masters Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Avia Masters
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>97.00%
 											</div>
@@ -1140,9 +1140,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/goal.webp" title="Goal Crash Free Demo, Review & Where to Play" alt="Goal Crash Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Goal Crash
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.00%
 											</div>
@@ -1166,9 +1166,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/christmas.webp" title="Christmas Crash Free Demo, Review & Where to Play" alt="Christmas Crash Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Christmas Crash
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>96.00%
 											</div>
@@ -1192,9 +1192,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/aviatrix.webp" title="Aviatrix Free Demo, Review & Where to Play" alt="Aviatrix Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Aviatrix
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>97.00%
 											</div>
@@ -1218,9 +1218,9 @@
 									<div class="slider__contener">
 										<img src="./img/slide/space.webp" title="Space XY Free Demo, Review & Where to Play" alt="Space XY Slot Game Thumbnail" />
 										<div class="slider__info">
-											<h3 class="slider__info-title">
+											<p class="slider__info-title">
 												Space XY
-											</h3>
+											</p>
 											<div class="slider__info-text">
 												<span>RTP:</span>97.00%
 											</div>
