fix font-size title to text

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -171,7 +171,7 @@
 		</section>
 <section class="text-block section">
 			<div class="container">
-				<div class="wrapper__text-block">
+				<div class="wrapper__text-block wrapper-dock-text-block">
 					<div class="text-block__line-date">
 						<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<mask id="mask0_3556_5335" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="-1" width="15" height="16">
