--- a/online-casinos.html
+++ b/online-casinos.html
@@ -623,7 +623,7 @@
 					</div>
                     <div class="item__line-real-money">
                         <p class="text__line-real-money">
-                            On <span class="text__line-block">pokies24.io</span>, you compare online casinos, bonuses, payment methods along with providers in one place. By doing this, you can choose a good site for your needs. The comparison framework lets you filter by pokies selection banking options in addition to verified licenses, which speeds up the decision process. The <span class="text__line-block">pokies24.io</span> also publishes responsible gambling information and privacy details for each reviewed operator.
+                            On <a href="./" class="text__line-block">pokies24.io</a>, you compare online casinos, bonuses, payment methods along with providers in one place. By doing this, you can choose a good site for your needs. The comparison framework lets you filter by pokies selection banking options in addition to verified licenses, which speeds up the decision process. The <a class="text__line-block" href="./">pokies24.io</a> also publishes responsible gambling information and privacy details for each reviewed operator.
                         </p>
                     </div>
 				</div>
@@ -661,7 +661,7 @@
 					<div class="block-mark__text-block">
 						<img src="./img/check.svg" alt="" />
 						<p>
-							<strong>Stick to verified lists.</strong> On <span class="text__line-block">pokies24.io</span> we publish only verified online casinos and recommend choosing casinos that appear on our verified lists. Verification includes checks on licence, provider roster and practical payment testing. When in doubt, choose an operator that has been independently verified.
+							<strong>Stick to verified lists.</strong> On <a class="text__line-block" href='./'>pokies24.io</a> we publish only verified online casinos and recommend choosing casinos that appear on our verified lists. Verification includes checks on licence, provider roster and practical payment testing. When in doubt, choose an operator that has been independently verified.
 						</p>
 					</div>
 					
@@ -917,12 +917,12 @@
 						</li>
 					</ul>
 					<p class="text__text-block last__element-text-block">
-						<span class="text__line-block">Pokies24.io</span> publishes a responsible gaming compact and highlights operators that provide robust player protection. If you or someone you know has concerns, use the available support lines and self-exclusion mechanisms.
+						<a href="./" class="text__line-block">Pokies24.io</a> publishes a responsible gaming compact and highlights operators that provide robust player protection. If you or someone you know has concerns, use the available support lines and self-exclusion mechanisms.
 					</p>
 
 					<h2 class="title__text-block">Closing notes</h2>
 					<p class="text__text-block">
-						Online real money casino play involves risk and responsibility. For Australian players, the relevant law means local providers cannot offer casino services, yet offshore casinos continue to accept Australians and provide AUD-compatible options. Evaluate operators on licence, provider roster, banking methods and dispute resolution history. Use demo play to learn games before staking funds, and rely on verified lists, such as those on <span class="text__line-block">pokies24.io</span>, to reduce risk.
+						Online real money casino play involves risk and responsibility. For Australian players, the relevant law means local providers cannot offer casino services, yet offshore casinos continue to accept Australians and provide AUD-compatible options. Evaluate operators on licence, provider roster, banking methods and dispute resolution history. Use demo play to learn games before staking funds, and rely on verified lists, such as those on <a href="./" class="text__line-block">pokies24.io</a>, to reduce risk.
 					</p>
 				</div>
 			</div>
