--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/bee-keeper">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -383,7 +383,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo"  href="./free-pokies/pokies-by-provider/mystic-wishes">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -409,7 +409,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/sweet-rush-bonanza">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -435,7 +435,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/fortune-spin">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -461,7 +461,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/fogo-do-brazil">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -487,7 +487,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/3-royal-coins-hold-and-win">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 								</div>
@@ -659,7 +659,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./pokies-by-provider/coin-strike-hold-and-win">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -685,7 +685,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/aztec-magic-bonanza">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -711,7 +711,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/gates-of-olympus">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -737,7 +737,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/big-buck-saloon">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -1131,7 +1131,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/avia-masters">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -1157,7 +1157,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/goal-crash">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -1183,7 +1183,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/christmas-crash">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -1209,7 +1209,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/aviatrix">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
@@ -1235,7 +1235,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/space-xy">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
