--- a/online-casinos.html
+++ b/online-casinos.html
@@ -823,7 +823,7 @@
 						Payment options are a major factor when choosing where to play. Below are common methods with a short description of how they work for Australian players.
 					</p>
 					<div class="block__provider-focus">
-						<div class="element__provider-focus">
+						<div class="element__provider-focus crypto">
 							<picture class="img__provider-focus">
 								<img
 									src="./img/pay/crypto.png"
@@ -838,7 +838,7 @@
 							</div>
 						</div>
 
-						<div class="element__provider-focus">
+						<div class="element__provider-focus crypto">
 							<picture class="img__provider-focus">
 								<img src="./img/pay/payId.png" alt="PayID Casino"/>
 							</picture>
@@ -850,7 +850,7 @@
 							</div>
 						</div>
 
-						<div class="element__provider-focus">
+						<div class="element__provider-focus crypto">
 							<picture class="img__provider-focus">
 								<img src="./img/pay/payPal.png" alt="PayPal Casino" />
 							</picture>
