--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="sliders">
+		<section class="sliders section fisrt-section">
 			<div class="container">
 				<div class="sliders__wrapper">
 					<div class="sliders__content">
