--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -157,7 +157,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="up-info section">
+		<section class="text-block section fisrt-section">
 			<div class="container">
 				<div class="up-info__wrapper">
 					<div class="up-info__line">
@@ -167,10 +167,6 @@
 					</div>
 					<h1 class="up-info__title">Privacy Policy</h1>
 				</div>
-			</div>
-		</section>
-		<section class="text-block section">
-			<div class="container">
 				<div class="wrapper__text-block wrapper-dock-text-block">
 					<div class="text-block__line-date">
 						<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
