--- a/online-casinos.html
+++ b/online-casinos.html
@@ -190,7 +190,7 @@
 				</div>
 			</div>
 		</header>
-        <section class="up-section">
+        <section class="up-section ">
             <div class="container">
                 <div class="up-section__wrapper">
                     <div class="up-section__block">
@@ -209,7 +209,7 @@
                 </div>
             </div>
         </section>
-        <section class="best-casinos">
+        <section class="best-casinos section fisrt-section">
             <div class="container">
                 <div class="best-casinos__wrapper">
                     <h2 class="best-casinos__title">
