--- a/statia.html
+++ b/statia.html
@@ -12,48 +12,9 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/statia.css" />
 		<meta name="description" content="Play top-rated free online pokies in Australia without registration. Read honest reviews, try free demos, and choose the right game for real money.">
 		<title>Best Online Pokies in Australia | Free Demos & Casino Reviews</title>
-		<script type="application/ld+json">
-			{
-			"@context": "https://schema.org",
-			"@type": "FAQPage",
-			"mainEntity": [
-				{
-				"@type": "Question",
-				"name": "Can Australians play online pokies legally?",
-				"acceptedAnswer": {
-					"@type": "Answer",
-					"text": "In practice, Australians can access many offshore sites that accept local players. Domestic licensed online casino operations are restricted. Australians should focus on operator transparency, licence information and compliance with advertising rules."
-				}
-				},
-				{
-				"@type": "Question",
-				"name": "What is the difference between demo play and real money play?",
-				"acceptedAnswer": {
-					"@type": "Answer",
-					"text": "Demo play uses virtual currency and lets you test mechanics risk free. Real money play involves deposit, wagering and the ability to withdraw winnings subject to terms and verification."
-				}
-				},
-				{
-				"@type": "Question",
-				"name": "Are free spins truly free?",
-				"acceptedAnswer": {
-					"@type": "Answer",
-					"text": "Free spins are free at issuance but usually come with wagering requirements and possibly maximum cashout limits. Always read the terms and check which titles the spins apply to."
-				}
-				},
-				{
-				"@type": "Question",
-				"name": "How important is RTP?",
-				"acceptedAnswer": {
-					"@type": "Answer",
-					"text": "RTP gives a theoretical long term return. It is useful for comparing games but not a guarantee of short term results."
-				}
-				}
-			]
-			}
-		</script>
 	</head>
 	<body>
 		<header class="header">
@@ -200,6 +161,31 @@
 				</div>
 			</div>
 		</header>
+        <section class="header-game section first-section">
+            <div class="container">
+                <div class="header-game__wrapper">
+                    <div class="up-info__line">
+						<a href="./" class="up-info__link">Home</a>
+						<span>></span>
+						<a href="./free-pokies" class="up-info__link">Free Pokies</a>
+                        <span>></span>
+						<a href="./free-pokies/pokies-by-provider" class="up-info__link">Pokies by Provider</a>
+                        <span>></span>
+						<a href="./free-pokies/pokies-by-provider/bee-keeper" class="up-info__link">Bee Keeper</a>
+					</div>       
+                    <h1 class="header-game__title">Bee Keeper Play Free Demo & Slot Review</h1>
+        </section>
+        <section class="text-game section">
+            <div class="container">
+                <div class="text-game__wrapeer">
+                    
+                </div>
+            </div>
+
+        </section>
+
+
+
 		<section class="providers">
 			<div class="container">
 				<div class="provider__wrapper">
