--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
 				<div class="wrapper__why-demo">
 					<h2 class="title__why-demo">Why play pokies in demo mode?</h2>
 					<p class="text__why-demo">
-						Playing pokies online for free is a low risk way to learn mechanics.
+						Playing <a href="./free-pokies" class="text__line-block">pokies online for free</a> is a low risk way to learn mechanics.
 						However, demos can sometimes vary from the live product. We check
 						whether demo behaviour matches the real money version. If a demo
 						offers different hit frequency or altered bonus odds we make that
@@ -2165,7 +2165,8 @@
 					Finding the best online casinos in Australia
 				</h2>
 				<p class="main-text__text-block">
-					The phrase best online casinos in Australia is common among players
+
+					The phrase <a href="./online-casinos" class="text__line-block"></a>>best online casinos in Australia</a> is common among players
 					searching for safe, valuable sites. Our selection criteria focus on
 					trust and player benefit rather than marketing.
 				</p>
