--- a/online-casinos.html
+++ b/online-casinos.html
@@ -518,7 +518,7 @@
 
 					<h2 class="title__text-block">Are online casinos legal in Australia?</h2>
 					<p class="text__text-block">
-						The legal framework for online gambling in Australia centers on the Interactive Gambling Act 2001. That law restricts the provision of some interactive gambling services to people in Australia, as it also restricts advertising the services. The Act prohibits offering online casino services to Australian customers from within Australia. The <a href="https://www.acma.gov.au/" rel="nofollow" target="_blank" class="text__line-block">Australian Communications and Media Authority explains</ф> the scope of the Act and the services that are banned.
+						The legal framework for online gambling in Australia centers on the Interactive Gambling Act 2001. That law restricts the provision of some interactive gambling services to people in Australia, as it also restricts advertising the services. The Act prohibits offering online casino services to Australian customers from within Australia. The <a href="https://www.acma.gov.au/" rel="nofollow" target="_blank" class="text__line-block">Australian Communications and Media Authority explains</a> the scope of the Act and the services that are banned.
 					</p>
 					<p class="text__text-block">
 						In practice, this means Australian-based companies are not permitted to operate online casinos for players physically in Australia. It does not make it a criminal offence for an individual to register with an overseas operator. Many offshore online casinos accept Australian customers, list AUD as an available currency and offer payment methods that suit Australians. For a legal text reference, the Act and its clauses on prohibited interactive gambling services are publicly available.
@@ -623,7 +623,9 @@
 					</div>
                     <div class="item__line-real-money">
                         <p class="text__line-real-money">
-                            On <a href="./" class="text__line-block">pokies24.io</a>, you compare online casinos, bonuses, payment methods along with providers in one place. By doing this, you can choose a good site for your needs. The comparison framework lets you filter by pokies selection banking options in addition to verified licenses, which speeds up the decision process. The <a class="text__line-block" href="./">pokies24.io</a> also publishes responsible gambling information and privacy details for each reviewed operator.
+                            On 
+							<a href="./" class="text__line-block">pokies24.io</a>
+							, you compare online casinos, bonuses, payment methods along with providers in one place. By doing this, you can choose a good site for your needs. The comparison framework lets you filter by pokies selection banking options in addition to verified licenses, which speeds up the decision process. The <a class="text__line-block" href="./">pokies24.io</a> also publishes responsible gambling information and privacy details for each reviewed operator.
                         </p>
                     </div>
 				</div>
