--- a/online-casinos.html
+++ b/online-casinos.html
@@ -107,7 +107,7 @@
 												<a href="#">PayId</a>
 											</li>
 											<li class="header__underitem">
-												<a href="#">Credit cards</a>
+												<a href="#">Credit Cards</a>
 											</li>
 											<li class="header__underitem">
 												<a href="#">Crypto</a>
@@ -518,7 +518,7 @@
 
 					<h2 class="title__text-block">Are online casinos legal in Australia?</h2>
 					<p class="text__text-block">
-						The legal framework for online gambling in Australia centers on the Interactive Gambling Act 2001. That law restricts the provision of some interactive gambling services to people in Australia, as it also restricts advertising the services. The Act prohibits offering online casino services to Australian customers from within Australia. The <a href="https://www.acma.gov.au/" rel="nofollow" target="_blank" class="text__line-block">Australian Communications and Media Authority explains</a> the scope of the Act and the services that are banned.
+						The legal framework for online gambling in Australia centers on the Interactive Gambling Act 2001. That law restricts the provision of some interactive gambling services to people in Australia, as it also restricts advertising the services. The Act prohibits offering online casino services to Australian customers from within Australia. The <a href="https://www.acma.gov.au/" rel="nofollow" target="_blank" class="text__line-block">Australian Communications and Media Authority</a> explains the scope of the Act and the services that are banned.
 					</p>
 					<p class="text__text-block">
 						In practice, this means Australian-based companies are not permitted to operate online casinos for players physically in Australia. It does not make it a criminal offence for an individual to register with an overseas operator. Many offshore online casinos accept Australian customers, list AUD as an available currency and offer payment methods that suit Australians. For a legal text reference, the Act and its clauses on prohibited interactive gambling services are publicly available.
