--- a/online-casinos.html
+++ b/online-casinos.html
@@ -346,7 +346,7 @@
 									PayId
 								</button>
 								<button class="best-casinos__link-payment filter-btn" data-filter="credit-cards">
-									Credit cards
+									Credit Cards
 								</button>
 								<button class="best-casinos__link-payment filter-btn" data-filter="crypto">
 									Crypto
