--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
 								<a href="./online-casinos.html">Online Casinos</a>
 								<ul class="header__sublist">
 									<li class="header__subitem">
-										<a href="./online-casinos.html?category=best-online-casinos-au">Best online casinos Australia</a>
-									</li>
-									<li class="header__subitem">
 										<a href="./online-casinos.html?category=recommended-casinos">Recommended</a>
 									</li>
 									<li class="header__subitem">
@@ -2063,7 +2060,7 @@
 								<source srcset="./img/provider/Aristocrat-mobile.png" media="(max-width: 550px)">
 								<img
 									src="./img/provider/Aristocrat.png"
-									alt="Aristocrat"
+									alt="aristocrat logo"
 								/>
 							</picture>
 							<div class="content__provider-focus">
@@ -2081,7 +2078,7 @@
 						<div class="element__provider-focus">
 							<picture class="img__provider-focus">
 								<source srcset="./img/provider/BGaming-mobile.png" media="(max-width: 550px)">
-								<img src="./img/provider/BGaming.png" alt="BGaming"/>
+								<img src="./img/provider/BGaming.png" alt="Bgaming logo"/>
 							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">BGaming Pokies</h3>
@@ -2098,7 +2095,7 @@
 						<div class="element__provider-focus">
 							<picture class="img__provider-focus">
 								<source srcset="./img/provider/Playson-mobile.png" media="(max-width: 550px)">
-								<img src="./img/provider/Playson.png" alt="Playson" />
+								<img src="./img/provider/Playson.png" alt="playson logo" />
 							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">Playson Pokies</h3>
@@ -2114,7 +2111,7 @@
 						<div class="element__provider-focus">
 							<picture class="img__provider-focus">
 								<source srcset="./img/provider/NetEnt-mobile.png" media="(max-width: 550px)">
-								<img src="./img/provider/NetEnt.png" alt="NetEnt" />
+								<img src="./img/provider/NetEnt.png" alt="netent logo" />
 							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">NetEnt Pokies</h3>
@@ -2130,7 +2127,7 @@
 						<div class="element__provider-focus">
 							<picture class="img__provider-focus">
 								<source srcset="./img/provider/Pragmatic-mobile.png" media="(max-width: 550px)">
-								<img src="./img/provider/Pragmatic.png" alt="Pragmatic" />
+								<img src="./img/provider/Pragmatic.png" alt="pragmatic play logo" />
 							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">Pragmatic Pokies</h3>
