--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
 											</div>
 											<div class="slider__info-line">
 												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/hot-cricket">Demo & Review</a>
-												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+												<a class="slider__info-link slider__info-link-play" href="./online-casinos">Play</a>
 											</div>
 										</div>
 									</div>
