--- a/index.html
+++ b/index.html
@@ -2163,7 +2163,7 @@
 				</h2>
 				<p class="main-text__text-block">
 
-					The phrase <a href="./online-casinos" class="text__line-block"></a>>best online casinos in Australia</a> is common among players
+					The phrase <a href="./online-casinos" class="text__line-block">best online casinos in Australia</a> is common among players
 					searching for safe, valuable sites. Our selection criteria focus on
 					trust and player benefit rather than marketing.
 				</p>
