--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							demos to help you find the right game before you play for real
 							money.
 						</p>
-						<a class="main__btn" href="https://pokies24.io/online-casinos"> Casinos We Recommend </a>
+						<a class="main__btn btn-yello" href="https://pokies24.io/online-casinos"> Casinos We Recommend </a>
 
 					</div>
 				</div>
@@ -1436,8 +1436,8 @@
 										+255 FREE SPINS
 									</span>
 									<div class="category__btns-item">
-										<a class="category__btn-review" href="#">Review</a>
-										<a class="category__btn-play" href="#">Play</a>
+										<a class="category__btn-review btn-blue" href="#">Review</a>
+										<a class="category__btn-play btn-yello" href="#">Play</a>
 									</div>
 								</div>
 							</div>
@@ -1453,8 +1453,25 @@
 										+255 FREE SPINS
 									</span>
 									<div class="category__btns-item">
-										<a class="category__btn-review" href="#">Review</a>
-										<a class="category__btn-play" href="#">Play</a>
+										<a class="category__btn-review btn-blue" href="#">Review</a>
+										<a class="category__btn-play btn-yello" href="#">Play</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="category__item-block">
+								<div class="category__img-item">
+									<img src="./img/partners/caswino.webp" alt="" />
+								</div>
+								<div class="category__info-item">
+									<h3 class="category__title-item btn-blue">Caswino</h3>
+									<span class="category__text-item btn-yello">
+										600% UP TO 4800$<br />
+										+255 FREE SPINS
+									</span>
+									<div class="category__btns-item">
+										<a class="category__btn-review btn-blue" href="#">Review</a>
+										<a class="category__btn-play btn-yello" href="#">Play</a>
 									</div>
 								</div>
 							</div>
@@ -1470,25 +1487,8 @@
 										+255 FREE SPINS
 									</span>
 									<div class="category__btns-item">
-										<a class="category__btn-review" href="#">Review</a>
-										<a class="category__btn-play" href="#">Play</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="category__item-block">
-								<div class="category__img-item">
-									<img src="./img/partners/caswino.webp" alt="" />
-								</div>
-								<div class="category__info-item">
-									<h3 class="category__title-item">Caswino</h3>
-									<span class="category__text-item">
-										600% UP TO 4800$<br />
-										+255 FREE SPINS
-									</span>
-									<div class="category__btns-item">
-										<a class="category__btn-review" href="#">Review</a>
-										<a class="category__btn-play" href="#">Play</a>
+										<a class="category__btn-review btn-blue" href="#">Review</a>
+										<a class="category__btn-play btn-yello" href="#">Play</a>
 									</div>
 								</div>
 							</div>
